typed-i18n/tests/compile-fail/unsupported_attribute_type.stderr
error: unsupported attribute type
 --> tests/compile-fail/unsupported_attribute_type.rs:6:14
  |
6 | #[typed_i18n(builder)]
  |              ^^^^^^^

error: unsupported attribute type
 --> tests/compile-fail/unsupported_attribute_type.rs:7:3
  |
7 | #[typed_i18n = "builder"]
  |   ^^^^^^^^^^
